--- a/languages/option-tree-theme.po
+++ b/languages/option-tree-theme.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OptionTree Theme\n"
-"POT-Creation-Date: 2015-02-08 08:15-0800\n"
-"PO-Revision-Date: 2015-02-08 08:15-0800\n"
+"POT-Creation-Date: 2015-02-13 01:18-0800\n"
+"PO-Revision-Date: 2015-02-13 01:18-0800\n"
 "Last-Translator: Derek Herman <derek@valendesigns.com>\n"
 "Language-Team: Valen Designs\n"
 "Language: en\n"
@@ -219,10 +219,8 @@ msgstr ""
 #: ../inc/theme-options.php:166
 #, php-format
 msgid ""
-"The Colorpicker Opacity option type saves a hexadecimal color code with an "
-"opacity value from %s to %s in increments of %s. Though the value is saved "
-"as hexadecimal, if used within the CSS option type the color and opacity "
-"values will be converted into a valid RGBA CSS value."
+"The Colorpicker Opacity option type saves an rgba color value for use in "
+"CSS. To add opacity to other colorpickers add the %s class to the %s array."
 msgstr ""
 
 #: ../inc/theme-options.php:180
